--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
         <div class="price">₩18,500</div>
         <button class="buy-btn">구매하기</button>
+
+        <a href="./miniBook.pdf" target="_blank"><div>PDF 미리보기</div></a>
       </div>
     </div>
 
